QMicroz v0.7
* Added INSTALL_FILES option to provide the ability to disable copying of this library files.
* Fixed some bugs that could potentially lead to undefined behavior.

---
QMicroz v0.6
* Redesigned architecture. Significantly simplified code base.
  The main class now has functionality for more flexible zippping at a lower level.
  Files qmztools.h and qmztools.cpp deleted. Many functions have been rewritten and combined.
* Ability to zip files and folders with an arbitrary entry name.
* Ability to extract individual items to a custom path.
* Ability to concise code using << operator.
* Static compress(paths) function now allows paths with different roots.
* ZipContents format changed to accelerate the existing entries search.
  <index, name> --> <name, index>
* Ability to set last modified date to folder entries.
* Ability to extract the selected folder with its contents.
* Extracting to the memory buffer no longer excludes folder entries.
* extractAll() now continues to extract the rest of the content despite the individual item fail.
* Reduced verbosity (again).

---
QMicroz v0.5
* miniz updated to 3.1.0
* The names of static compression functions have been merged.
  multiple comress_FOO() --> single compress(...)
* Reduced verbosity. Added the ability to enable the verbose mode for member functions.
* Added static functions 'isArchive' and 'isZipFile' to avoid the need to implement such checks in the project code.
* Shortcuts and symlinks are no longer excluded from the path list.
* Reference comments have been improved.
* Improved BufFile handling.
* Added unit tests.
* Fixed static build on Windows MinGW.

---
QMicroz v0.4
* It is now possible to request extended information about items contained in the archive.
    For example, get the modification date or compressed/uncompressed size.
* The file extracted to the buffer (struct BufFile) now also contains its date modified.